--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
                         <div class="article-entry" itemprop="articleBody">
-                            <h4 style="color: pink">涉世浅,点染亦浅;历事深,机械亦深.故君子与其练达,不若朴鲁;与其曲谨,不若疏狂。</h4>
+                            <h5 style="color: midnightblue">涉世浅,点染亦浅;历事深,机械亦深.故君子与其练达,不若朴鲁;与其曲谨,不若疏狂。</h5>
                         </div>
                         <footer class="article-footer">
                             <a data-url="http://leesHome.github.io/undefined/undefined/undefined/undefined-dev/"
