--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="alternate" href="/atom.xml" title="lees" type="application/atom+xml">
 
 
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="https://avatars0.githubusercontent.com/u/23739690?s=40&v=4" type="img/x-ico" />
 
 
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
