--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     </nav>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="/fancybox/jquery.fancybox.css">
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/js/script.js"></script>
