--- a/3d轮播图.html
+++ b/3d轮播图.html
@@ -39,7 +39,12 @@
                 top: 100px;
                 margin-left: -150px;
             }
-
+            
+            .img-wrapper img{
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+                -webkit-box-reflect: below 3px -webkit-linear-gradient(top,rgba(0,0,0,0) 40%,rgba(0,0,0,0.5));
+            }
+            
             .img-wrapper:nth-child(1) {
                 transform: rotateY(0) translateZ(300px);
             }
