--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <div id="container">
     <div id="wrap">
-        <header id="header" style="background: url(.\images\1.jpg) no-repeat 100% center;">
+        <header id="header" style="background: url(../images/1.jpg) no-repeat 100% center;">
             <div id="banner"></div>
             <div id="header-outer" class="outer">
                 <div id="header-title" class="inner">
