--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
 <div id="container">
     <div id="wrap">
-        <header id="header" style="background: url(../images/1.jpg) no-repeat 100% center;">
-            <div id="banner"></div>
+        <header id="header">
+            <div id="banner" style="background: url(../images/1.jpg) no-repeat 100% center;"></div>
             <div id="header-outer" class="outer">
                 <div id="header-title" class="inner">
                     <h1 id="logo-wrap">
