--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="container">
     <div id="wrap">
         <header id="header">
-            <div id="banner" style="background: url(../images/1.jpg) no-repeat 100% center;"></div>
+            <div id="banner" style="background: url(../images/1.jpg) no-repeat 50% center;background-size: 100%;"></div>
             <div id="header-outer" class="outer">
                 <div id="header-title" class="inner">
                     <h1 id="logo-wrap">
