--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
                         <div class="article-entry" itemprop="articleBody">
                             <blockquote>菜根谭</blockquote>
-                            <h5 style="color: #258fb8;text-align: center;cursor:pointer">
-                                <a href="http://yuedu.163.com/book_reader/b3de6a32-9e50-490d-8d01-a6f64db2a1f5_4">涉世浅,点染亦浅;历事深,机械亦深.故君子与其练达,不若朴鲁;与其曲谨,不若疏狂。</a>
-                            </h5>
+                            <article style="color: #258fb8;text-align: center;cursor:pointer">
+                                <a target="_blank" href="http://yuedu.163.com/book_reader/b3de6a32-9e50-490d-8d01-a6f64db2a1f5_4">涉世浅,点染亦浅;历事深,机械亦深.故君子与其练达,不若朴鲁;与其曲谨,不若疏狂。</a>
+                            </article> 
                         </div>
                         <footer class="article-footer">
                             <a data-url="http://leesHome.github.io/undefined/undefined/undefined/undefined-dev/"
@@ -104,9 +104,9 @@
 
                         <div class="article-entry" itemprop="articleBody">
                             <blockquote>斯蒂芬·霍金</blockquote>
-                            <h5 style="color: #258fb8;text-align: center;cursor:pointer">
-                                <a href="http://www.sohu.com/a/225561105_348755">记住要仰望星空，不要低头看脚下。无论生活如何艰难，请保持一颗好奇心。你总会找到自己的路和属于你的成功。</a>
-                            </h5>
+                            <article style="color: #258fb8;text-align: center;cursor:pointer">
+                                <a target="_blank" href="http://www.sohu.com/a/225561105_348755">记住要仰望星空，不要低头看脚下。无论生活如何艰难，请保持一颗好奇心。你总会找到自己的路和属于你的成功。</a>
+                            </article>
                         </div>
                         <footer class="article-footer">
                             <a data-url="http://leesHome.github.io/undefined/undefined/undefined/undefined-dev/"
