--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/js/script.js"></script>
     <script>
-        console.log($("#banner")[0].style.backgrond.url)
+        var obj = document.getElementById("banner");
+        console.log(obj.style.background["url"])
     </script>
 </div>
 </body>
