--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
     <script src="/js/script.js"></script>
     <script>
         var obj = document.getElementById("banner");
-        console.log(obj.style.background["url"])
+        console.log(obj.style.background["url"]);
+        debugger
     </script>
 </div>
 </body>
