--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             }else if(i=4){
                 i=1;
             }
+            debugger;
             obj.style.background = "url(\"../images/0"+ i +".jpg\") 50% center / 100% no-repeat"
         }
         setTimeout(fn(i), 2000);
