--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 i=1;
             }
         }
+        debugger;
         setTimeout(fn, 2000);
         obj.style.background = "url(\"../images/0"+ i +".jpg\") 50% center / 100% no-repeat"
         
