--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <script>
         var obj = document.getElementById("banner");
         for(var i=1; i<5; i++){
-            (setTimeout(function(i){
+            setTimeout(function(i){
                 obj.style.background = "url(\"../images/0"+ i +".jpg\") 50% center / 100% no-repeat"
-            },1000))(i)
+            },1000)(i)
         }
         
     </script>
