--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         function timer(){
                x++;    
                x=x%6;        
-               obj.style.background = "url(\"../images/"+ imgs[x] +".jpg\") 50% center / 100% no-repeat"; 
+               obj.style.background = "url(\"../images/"+ imgs[x] +"\") 50% center / 100% no-repeat"; 
         }
         setInterval(timer,1500);
         
