--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                         <ul>
 
                             <li>
-                                <a href="3d轮播图.html">javascript</a>
+                                <a href="3d轮播图.html">web前端</a>
                             </li>
 
                             <li>
-                                <a href="3D轮播图New.html/">java</a>
+                                <a target="_blank" href="http://www.360doc.com/content/15/0731/09/2369606_488505193.shtml" >生活哲理</a>
                             </li>
 
                         </ul>
