--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <ul>
 
                             <li>
-                                <a href="3d轮播图.html">web前端</a>
+                                <a target="_blank" href="3d轮播图.html">web前端</a>
                             </li>
 
                             <li>
