--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         }else{
             localStorage[path] = 1;
         }
-        document.write("访问数: " + localStorage[path]);
+        console.log("访问数: " + localStorage[path]);
     </script>
 </div>
 </body>
