--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         }
         console.log("访问数: " + localStorage[path]);
     </script>
+    <script src="/js/askingTimes.js"></script>
 </div>
 </body>
 </html>
