--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                             <li>
                                 <a target="_blank" href="http://www.iqiyi.com/w_19rsdkcoa5.html" >人生格局</a>
                             </li>
+                            
+                            <li>
+                                <a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzI4NjAwNjA4MQ==&mid=2651168773&idx=1&sn=ff5b360850ddf6d6028e851f52d17a92&chksm=f0128e2bc765073dbd345ac9b60e03170c448f9f31095dcbd485d9667d6af6403fb1f45c5e13&mpshare=1&scene=1&srcid=0415vdnU5Y6nwyIAdLb7cPPD&pass_ticket=Ap0Vyk%2BFeMWkaCb%2F1PK8LmMWEVzfBiJcNMCFaoYYUZ2LWQKtkTW3rPwhn%2Fi07DBc#rd" >你理解的人越多，理解你的人越少</a>
+                            </li>
 
                         </ul>
                     </div>
