--- a/3d轮播图.html
+++ b/3d轮播图.html
@@ -69,26 +69,6 @@
                 transform: rotateY(300deg) translateZ(300px);
             }
     
-            /* @keyframes scroll {
-                0% {
-                    transform: rotateY(0deg);
-                }
-                60% {
-                    transform: rotateY(-60deg);
-                }
-                120% {
-                    transform: rotateY(-120deg);
-                }
-                240% {
-                    transform: rotateY(-240deg);
-                }
-                300% {
-                    transform: rotate(-300deg);
-                }
-                to {
-                    transform: rotateY(-360deg);
-                }
-            } */
         </style>
     </head>
     <body>
@@ -113,6 +93,7 @@
                     <img class="photo" src="https://bobofangwei.github.io/frontEnd2017/ife2017/css3%E5%AE%9E%E7%8E%B03d%E8%BD%AE%E6%92%AD%E5%9B%BE/imgs/6.jpg" alt="">
                 </div>
             </div>
+            <p style="font-size: 20px;text-align: center;">人性如此肮脏，心理不够强大，思想不够深刻如何立足于社会</p>
         </div>
         <script type="text/javascript">
             var stage = document.querySelector('.stage')
