--- a/3d轮播图.html
+++ b/3d轮播图.html
@@ -94,6 +94,7 @@
                 </div>
             </div>
             <p style="font-size: 20px;text-align: center;">人性如此复杂，心理不够强大，思想不够深刻如何立足于社会</p>
+            <p style="font-size: 20px;text-align: center;">落后就要挨打--<em>被动</em>就会挨打</p>
         </div>
         <script type="text/javascript">
             var stage = document.querySelector('.stage')
