--- a/invest.html
+++ b/invest.html
@@ -8,42 +8,42 @@
 </head>
 	<body>
 		<div class="centerContext">
-			<div class="circle c9">
+			<a href="javascript:;" class="circle c9">
 				<h3>9</h3>
 				<p>生成支付申请</p>
-			</div>
-			<div class="circle c1">
+			</a>
+			<a href="javascript:;" class="circle c1">
 				<h3>1</h3>
 				<p>录入专项资金</p>
-			</div>
-			<div class="circle c8">
+			</a>
+			<a href="javascript:;" class="circle c8">
 				<h3>8</h3>
 				<p>送审资助项目</p>
-			</div>
-			<div class="circle c2">
+			</a>
+			<a href="javascript:;" class="circle c2">
 				<h3>2</h3>
 				<p>录入资助方向</p>
-			</div>
-			<div class="circle c7">
+			</a>
+			<a href="javascript:;" class="circle c7">
 				<h3>7</h3>
 				<p>入录资助项目</p>
-			</div>
-			<div class="circle c3">
+			</a>
+			<a href="javascript:;" class="circle c3">
 				<h3>3</h3>
 				<p>关联指标</p>
-			</div>
-			<div class="circle c6">
+			</a>
+			<a href="javascript:;" class="circle c6">
 				<h3>6</h3>
 				<p>关联财政资助方向</p>
-			</div>
-			<div class="circle c4">
+			</a>
+			<a href="javascript:;" class="circle c4">
 				<h3>4</h3>
 				<p>审核资助项目</p>
-			</div>
-			<div class="circle c5">
+			</a>
+			<a href="javascript:;" class="circle c5">
 				<h3>5</h3>
 				<p>录入资助方向</p>
-			</div>
+			</a>
 			<div class="centerPoint">深圳市专项资金信息管理系统</div>
 		</div>
 	</body>	
