--- a/invest.html
+++ b/invest.html
@@ -44,7 +44,7 @@
 				<h3>5</h3>
 				<p>录入资助方向</p>
 			</a>
-			<div class="centerPoint">深圳市专项资金信息管理系统</div>
+			<a href="javascript:;" class="centerPoint">深圳市专项资金信息管理系统</a>
 		</div>
 	</body>	
 </html>
