--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/23739690?s=40&v=4" type="img/x-ico" />
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/style.css">
+    <script>
+        window.onload = function(){
+            var page = {
+                'password': '123456' 
+            };
+            (function(){
+                if('{{ page.password }}'){
+                    if (prompt('请输入文章密码') !== '{{ page.password }}'){
+                        alert('密码错误！');
+                        history.back();
+                    }
+                }
+            })();
+        }
+    </script>
 </head>
 <body>
 <div id="container">
