--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             };
             (function(){
                 if('{{ page.password }}'){
-                    if (prompt('请输入文章密码') !== '{{ page.password }}'){
+                    if (prompt('请输入文章密码') !== page.password){
                         alert('密码错误！');
                         history.back();
                     }
