--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 'password': '123456' 
             };
             (function(){
-                if('{{ page.password }}'){
+                if(page.password){
                     if (prompt('请输入文章密码') !== page.password){
                         alert('密码错误！');
                         history.back();
