--- a/invest.html
+++ b/invest.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/moneys.css">
 </head>
 	<body>
-		<div class="centerContext">
+		<div class="centerContext" style="position: fixed">
 			<a href="javascript:;" class="circle c9">
 				<h3>9</h3>
 				<p>生成支付申请</p>
