--- a/invest.html
+++ b/invest.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/moneys.css">
 </head>
 	<body>
+		<div class="bgsection"></div>
 		<div class="centerContext">
 			<a href="javascript:;" class="circle c9">
 				<h3>9</h3>
