--- a/register.html
+++ b/register.html
@@ -4,8 +4,8 @@
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/css.css">
 </head>
 <body>
 	<header>
@@ -25,7 +25,7 @@
     top: 2rem;background: #249B25;padding: 0.5rem;border-radius: .4rem;color: white;">
 		</div>
 		<div class="next">
-			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" name="" value="下一步">
+			<a style="border-radius: .4rem;color: white;margin-top: 3rem" name="" href="registerDone.html">下一步</a>
 		</div>
 	</div>
 </body>
