--- a/registerDone.html
+++ b/registerDone.html
@@ -32,7 +32,7 @@
 			<input type="text" style="color: #ccc;" placeholder="请输入身份证">
 		</div>
 		<div class="next">
-			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" name="" value="完成">
+			<a style="border-radius: .4rem;color: white;margin-top: 3rem" href="Done.html">完成</a>
 		</div>
 	</div>
 </body>
