--- a/registerDone.html
+++ b/registerDone.html
@@ -4,8 +4,8 @@
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/css.css">
 </head>
 <body>
 	<header>
