--- a/register.html
+++ b/register.html
@@ -15,11 +15,11 @@
 	<div class="con">
 		<p style="color: #ccc;">应用程序是建立在您想要显示的简单的点击事物上 应用程序是建立在您想要显示的简单的点击事物上 -lixingyang</p>
 		<div class="infor">
-			<img src="img/phone.png" alt="">
+			<img src="images/phone.png" alt="">
 			<input type="text" style="color: #ccc;" placeholder="请收入手机号码">
 		</div>
 		<div class="infor">
-			<img src="img/information.png" alt="">
+			<img src="images/information.png" alt="">
 			<input type="text" style="color: #ccc;" placeholder="请收入手机号码">
 			<input type="button" value="获取验证码" style="position: absolute;right: 1.5rem;
     top: 2rem;background: #249B25;padding: 0.5rem;border-radius: .4rem;color: white;">
