--- a/registerDone.html
+++ b/registerDone.html
@@ -13,7 +13,7 @@
 		<span>注册</span>
 	</header>
 	<div class="con">
-		<span style="display: inline-block;background: url(img/1.png) no-repeat left top;margin-top: 1rem;">
+		<span style="display: inline-block;background: url(images/1.png) no-repeat left top;margin-top: 1rem;">
 				<em style="margin-left: 3rem;display:inline-block;vertical-align:middle;color: #615f5f;">请完善个人信息</em>
 			</span>
 		<p style="color: #ccc;margin-top: -1rem;">
