--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     top: 2rem;background: #249B25;padding: 0.5rem;border-radius: .4rem;color: white;">
 		</div>
 		<div class="next">
-			<a style="border-radius: .4rem;color: white;margin-top: 3rem" name="" href="registerDone.html">下一步</a>
+			<input style="border-radius: .4rem;color: white;margin-top: 3rem" name="" href="registerDone.html" value="下一步" />
 		</div>
 	</div>
 </body>
