--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     top: 2rem;background: #249B25;padding: 0.5rem;border-radius: .4rem;color: white;">
 		</div>
 		<div class="next">
-			<input style="border-radius: .4rem;color: white;margin-top: 3rem" name="" href="registerDone.html" value="下一步" />
+			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" name="" href="registerDone.html" onclick="window.open('https://leeshome.github.io/registerDone.html','_self');" />
 		</div>
 	</div>
 </body>
