--- a/registerDone.html
+++ b/registerDone.html
@@ -32,7 +32,7 @@
 			<input type="text" style="color: #ccc;" placeholder="请输入身份证">
 		</div>
 		<div class="next">
-			<a style="border-radius: .4rem;color: white;margin-top: 3rem" href="Done.html">完成</a>
+			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" value="完成" onclick="window.open('https://leeshome.github.io/Done.html','_self');" />
 		</div>
 	</div>
 </body>
