--- a/registerDone.html
+++ b/registerDone.html
@@ -21,18 +21,18 @@
 		</p>
 		<div class="infor">
 			<span style="color: #8A8A8A;">名字</span>
-			<input type="text" style="color: #ccc;" placeholder="lixinhya">
+			<input type="text" style="color: #ccc;" name="userName" placeholder="lixinhya"/>
 		</div>
 		<div class="infor">
 			<span style="color: #8A8A8A;">手机号码</span>
-			<input type="text" style="color: #ccc;" placeholder="12132143435">
+			<input type="text" style="color: #ccc;" name="cellPhone" placeholder="12132143435"/>
 		</div>
 		<div class="infor">
 			<span style="color: #8A8A8A;">身份证</span>
-			<input type="text" style="color: #ccc;" placeholder="请输入身份证">
+			<input type="text" style="color: #ccc;" name="ID" placeholder="请输入身份证">
 		</div>
 		<div class="next">
-			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" value="完成" onclick="window.open('https://leeshome.github.io/Done.html','_self');" />
+			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" value="完成" onclick="window.close();" />
 		</div>
 	</div>
 </body>
