--- a/Done.html
+++ b/Done.html
@@ -23,7 +23,7 @@
 			应用程序是建立在您想要显示的简单的点击事物上 应用程序是建立在您想要显示的简单的点击事物上 -lixingyang
 		</p>
 		<div class="next">
-			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" name="" value="完成">
+			<input type="button" style="border-radius: .4rem;color: white;margin-top: 3rem" value="完成" onclick="window.close()" />
 		</div>
 	</div>
 </body>
