--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/23739690?s=40&v=4" type="img/x-ico" />
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/style.css">
+    <style type="text/css" media="screen">
+        @charset "utf-8";
+        *{margin: 0;padding: 0;}
+        img{border:0;display:block;}
+        ol, ul ,li{list-style: none;}
+        body{background:#272822;}
+        a{outline:none;text-decoration:none;}
+        .pointer{height:4px;position:absolute;bottom:0px;}
+        .pointer li{width:42px;height:1px;background:#5a5a5a;float:left;margin:0 5px;cursor: pointer;}
+        .pointer li.now{height:4px;background:#c8c8c8;}
+        .cut{background:#bdbdbd;position:absolute;font-family:'宋体';color:#fff;text-align:center;cursor:pointer;opacity:0.2;}
+        .J_banner{max-width:100%;position:relative;overflow:hidden;margin:0 auto 10px;}
+        .J_banner .img{width:2000px;overflow:hidden;position:absolute;top:0;left:0;}
+        .J_banner .img li{float:left;position:relative;}
+        .J_banner1 .pointer{width:100px;height:15px;position:absolute;bottom:16px;left:50%;}
+        .J_banner1 .pointer li{width:15px;height:15px;background:#d0d0d0;border-radius:50%;margin:0 5px;float:left;}
+        .J_banner1 .pointer li.now{background:#fff;}
+        .J_banner .cut{width:34px;height:58px;left:20px;font-size:18px;line-height:58px;}
+        .J_banner .cut.next{left:auto;right:20px;}
+        h1{color:#fff;text-align:center;padding:50px 0 30px;}
+    </style>
     <script>
         window.onload = function(){
             var page = {
@@ -34,8 +55,20 @@
 <body>
 <div id="container">
     <div id="wrap">
-        <header id="header" style="height:400px">
-            <div id="banner" style="background: url(../images/04.jpg) no-repeat 50% center;background-size: 100%;"></div>
+        <header id="header" style="height:400px;position:relative;">
+            <!-- <div id="banner" style="background: url(../images/04.jpg) no-repeat 50% center;background-size: 100%;"></div> -->
+            <div id="banner" style="position:absolute;left:0;top:0;z-index:-99;">
+                <ul class="img">
+                    <li><a href=""><img src="../images/01.jpg" alt=""></a></li>
+                    <li><a href=""><img src="../images/02.jpg" alt=""></a></li>
+                    <li><a href=""><img src="../images/03.jpg" alt=""></a></li>
+                    <li><a href=""><img src="../images/04.jpg" alt=""></a></li>
+                    <li><a href=""><img src="../images/05.jpg" alt=""></a></li>
+                </ul>
+                <ul class="pointer"></ul>
+                <a class="cut prev"> < </a>
+                <a class="cut next"> > </a>
+            </div>
             <div id="header-outer" class="outer">
                 <div id="header-title" class="inner">
                     <h1 id="logo-wrap">
@@ -183,20 +216,26 @@
     <link rel="stylesheet" href="/fancybox/jquery.fancybox.css">
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/Myapi.js"></script>
     <script>
-        var obj = document.getElementById("banner");
+        /*var obj = document.getElementById("banner");
         var imgs =["01.jpg", "02.jpg", "03.jpg", "04.jpg", "05.jpg"];    
         var x = 1;        
         function timer(){
                x++;    
                x=x%5;        
                obj.style.background = "url(\"../images/"+ imgs[x] +"\") 50% center / 100% no-repeat"; 
-        }
+        }*/
         setInterval(timer,8000);
         $("h3.show").hover(function(){
             $(this).children('em').css({"display": "inline"});
         }, function(){
             $(this).children('em').css({"display": "none"});  
+        })
+
+        $(function(){
+            var myApi2 = new Myapi();
+            myApi2.JSON.lagout($('#banner'), 1000, 10);
         })
     </script>
 </div>
