--- a/moneyGet.html
+++ b/moneyGet.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="stylesheet" href="http://apps.bdimg.com/libs/animate.css/3.1.0/animate.min.css">
+	<link rel="stylesheet" href="https://apps.bdimg.com/libs/animate.css/3.1.0/animate.min.css">
 	<style type="text/css">
 		#pay_pic{
 		    overflow: hidden;
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src=" http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src=" https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript">
 	alert();
 	currentDiggType = 0;
