--- a/moneyGet.html
+++ b/moneyGet.html
@@ -27,21 +27,21 @@
 					<p>
 					<em id="__mceDel">&lt;div ——————————— position:relative; 不是最近的祖先定位元素，不是参照物<br>&lt;div—————————-没有设置为定位元素，不是参照物<br>&lt;div———————- position:relative 参照物<br>&lt;div box1<br>&lt;div box2 ——–position:absolute; top:50px; left:120px;<br>&lt;div box3<br>效果图：</em></p>
 					<p>
-					<img src="https://pic002.cnblogs.com/images/2012/422101/2012072618164674.jpg" alt=""></p>
+					<img src="http://pic002.cnblogs.com/images/2012/422101/2012072618164674.jpg" alt=""></p>
 					<p>为改变参照物（橘色框）后的效果<br>层级关系为：<br>&lt;div ——————————— position:relative;最近的祖先定位元素，参照物<br>&lt;div—————————-没有设置为定位元素，不是参照物<br>&lt;div———————-没有设置为定位元素，不是参照物<br>&lt;div box1<br>&lt;div box2 ——–position:absolute; top:50px; left:120px;<br>&lt;div box3<br>效果图：</p>
 					<p>
 					<img src="https://pic002.cnblogs.com/images/2012/422101/2012072618180663.jpg" alt=""></p>
 					<p>
 					<strong>参照物为最顶级的元素情况</strong>。<br>层级关系为：<br>&lt;div ———————————没有设置为定位元素，不是参照物<br>&lt;div—————————-没有设置为定位元素，不是参照物<br>&lt;div———————-没有设置为定位元素，不是参照物<br>&lt;div box1<br>&lt;div box2 ——–position:absolute; top:50px; left:120px;<br>&lt;div box3<br>效果图：</p>
 					<p>
-					<img src="https://pic002.cnblogs.com/images/2012/422101/2012072618185065.jpg" alt=""></p>
+					<img src="http://pic002.cnblogs.com/images/2012/422101/2012072618185065.jpg" alt=""></p>
 					<p>&nbsp;</p>
 					<p><strong>仅使用margin属性布局绝对定位元素的情况</strong><br>此情况，margin-bottom 和margin-right的值不再对文档流中的元素产生影响，因为该元素已经脱离了文档流。另外，不管它的祖先元素有没有定位，都是以文档流中原来所在的位置上偏移参照物。&nbsp;
 					<br>图9中，使用margin属性布局相对定位元素。<br>层级关系为：<br>&lt;div ——————————— position:relative; 不是参照物<br>&lt;div—————————-没有设置为定位元素，不是参照物<br>&lt;div———————-没有设置为定位元素，不是参照物<br>&lt;div box1<br>&lt;div box2 ——–position:absolute; margin-top:50px; margin-left:120px;<br>&lt;div box3<br>效果图：</p>
-					<p><img src="https://pic002.cnblogs.com/images/2012/422101/2012072618431998.jpg" alt=""></p>
+					<p><img src="http://pic002.cnblogs.com/images/2012/422101/2012072618431998.jpg" alt=""></p>
 					<p>IE6的情况下，box2前面没有兄弟节点，则margin-left的值会出现双倍边距，见图10。<br>层级关系为：<br>&lt;div ——————————— position:relative; 不是参照物<br>&lt;div—————————-没有设置为定位元素，不是参照物<br>&lt;div———————-没有设置为定位元素，不是参照物<br>&lt;div box1<br>&lt;div box2 ——–position:absolute; margin-top:50px; margin-left:60px;<br>&lt;div box3<br>效果图：</p>
 					<p>
-					<img src="https://pic002.cnblogs.com/images/2012/422101/2012072618451464.jpg" alt=""></p>
+					<img src="http://pic002.cnblogs.com/images/2012/422101/2012072618451464.jpg" alt=""></p>
 					<p>&nbsp;</p>
 					<p>&nbsp;</p>
 				</div>
