--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/23739690?s=40&v=4" type="img/x-ico" />
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/style.css">
-<!--     <style type="text/css" media="screen">
-        @charset "utf-8";
-        ol, ul ,li{float: left;width: 100%;list-style: none;height: 100%;}
-        a{outline:none;text-decoration:none;}
-        .J_banner{max-width:100%;position:relative;overflow:hidden;margin:0 auto 10px;}
-        .J_banner .img{width:2000px;overflow:hidden;position:absolute;top:0;left:0;}
-        .J_banner .img li{float:left;position:relative;}
-    </style> -->
-    <script>
+<!--     <script>
         window.onload = function(){
             var page = {
                 'password': '123456' 
@@ -37,7 +29,7 @@
                 }
             })();
         }
-    </script>
+    </script> -->
 </head>
 <body>
 <div id="container">
@@ -203,23 +195,7 @@
     <link rel="stylesheet" href="/fancybox/jquery.fancybox.css">
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/js/script.js"></script>
-<!--     <script src="/js/Myapi.js"></script> -->
-    <script>
-//         var obj = document.getElementById("banner");
-//         var imgs =["01.jpg", "02.jpg", "03.jpg", "04.jpg", "05.jpg"];    
-//         var x = 1;        
-//         function timer(){
-//                x++;    
-//                x=x%5;        
-//                obj.style.background = "url(\"../images/"+ imgs[x] +"\") 50% center / 100% no-repeat"; 
-//         }
-//         setInterval(timer,8000);
-//         $("h3.show").hover(function(){
-//             $(this).children('em').css({"display": "inline"});
-//         }, function(){
-//             $(this).children('em').css({"display": "none"});  
-//         })
-    </script>
+
 </div>
 </body>
 </html>
